gui: fix temp icon position

--- a/gui/index.html
+++ b/gui/index.html
@@ -453,6 +453,7 @@ License: MIT
                 <abbr title="Current temperature in °C or °F">
                     <svg
                         class="icontemp iconsmall"
+                        style="margin-left: 0px"
                         xmlns="http://www.w3.org/2000/svg"
                         xml:space="preserve"
                         viewBox="0 0 250.189 250.189"
