Set apiHost at root

--- a/gui/index.html
+++ b/gui/index.html
@@ -685,7 +685,8 @@ License: MIT
             //
             const server = "https://meteoglance.com";
             const port = null;
-            const apiHost = `${server}${port?`:${port}`:''}`;
+            //const apiHost = `${server}${port?`:${port}`:''}`;
+            const apiHost = '';
 
             function apiGetWeatherData() {
                 let req = new XMLHttpRequest();
