--- a/gui/index.html
+++ b/gui/index.html
@@ -612,7 +612,7 @@ License: MIT
                 maxBounds: bounds,
             }).setView(L.latLng(47, 27), 3);
             
-            map.attributionControl.setPrefix('© Nicu Pavel MeteoGlance');
+            map.attributionControl.setPrefix('© <a href="https://github.com/nicupavel/weather-aprs">Nicu Pavel MeteoGlance</a>');
 
             // add the OpenStreetMap tiles
             L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
